# kestrix_api

./: .env.example  .gitignore  Procfile  nixpacks.toml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: image_index.csv  thermal_images  thermal_temps
data/thermal_temps/: 343c6492-2d6e-4c0a-a612-7f2b76528117.npy  50375e3d-44f6-412a-9cc9-0a4f87995e0d.npy  5f2315fd-f92f-4279-952f-b88c35f26044.npy  68b30ed5-fdd7-43b6-88ad-77ad50189dea.npy  698ef7c4-3c11-41f9-a377-5a3519cc562e.npy  6e94c197-5fb3-4819-aa59-0e45ec128e87.npy  80b68c66-5c9e-40ec-a2fa-c6be55f890b1.npy  a147023a-b665-4137-a993-7c8ed3e506cd.npy  cbb283d7-43f9-44cb-80c9-8433c11a5007.npy  cc84b87f-2ce6-419b-8677-4dc068d16632.npy
src/thermal_palette/: __init__.py  alignment.py  api.py  cli.py  config.py  grouping.py  models.py  palette.py
tests/: conftest.py  test_alignment.py  test_api.py  test_grouping.py  test_palette.py
